# XDU_HW

./: README.md  西电大作业模板1.0.docx
3选修/2.2无人机仿真开发/src/simulation/: CMakeLists.txt  README.md  package.xml
3选修/2.2无人机仿真开发/src/simulation/launch/Demo/: cartographer2Dlidar_location_demo_px4.launch  cartographer2Dlidar_mapping_demo_px4.launch  cartographer3Dlidar_location_demo_px4.launch  gmapping_demo_px4.launch  obstacle_avoidance_2Dlaser_matlab_vfh_px4.launch  obstacle_avoidance_2Dlaser_vfh_px4.launch  octomap_3Dlidar_px4.launch  octomap_depthCamera_px4.launch  ros_2Dnav_demo_px4.launch  rtabmap_depthCam_mapping_demo_px4.launch  rtabmap_stereo_mapping_demo_px4.launch
3选修/2.2无人机仿真开发/src/simulation/launch/px4/: 2Dlidar_camera_car_Px4.launch  2Dlidar_px4.launch  3Dlidar_px4.launch  depth_camera_px4.launch  iris_px4.launch  irlock_camera_px4.launch  models_demo_test_px4.launch  realsense_camera_3Dlidar_px4.launch  realsense_camera_px4.launch  rover_px4.launch  stereo_camera_px4.launch
3选修/2.2无人机仿真开发/src/simulation/models/2Dlidar/: model.sdf
3选修/2.2无人机仿真开发/src/simulation/models/amov_car/: model.config  model.sdf
3选修/2.2无人机仿真开发/src/simulation/models/classroom/: model.config  model.sdf
3选修/2.2无人机仿真开发/src/simulation/models/corridors/: model.config  model.sdf
3选修/2.2无人机仿真开发/src/simulation/resource/: px4_config_noTF.yaml  px4_model.rviz
3选修/2.2无人机仿真开发/src/simulation/scripts/: autofly.py  rover_keyboard_control_px4.py
3选修/2.2无人机仿真开发/src/simulation/worlds/: complexRoom.world  corridors.world  densityColumn.world  empty_room.world  niceWebsite.md  simcity.world
(+371 files in other folders)
