<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>1.0.7</version>
  <description>
    simulation for amov.
  </description>

  <license>BSD</license>
  <author>bingo</author>
  <maintainer email="bingobin.lw@gmail.com">bingo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>camera_info_manager</depend>
  <exec_depend>depth_image_proc</exec_depend>

  <test_depend>rostest</test_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

 <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>

</package>
